# CellWhisperer

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONVENTIONS.md  Dockerfile  LICENSE  README.md  SHERLOCK_UCE_DEPLOYMENT.md  backup_to_lustre.sh  config.yaml  entrypoint.sh  flake.nix  launch.json  lsyncd_home.conf  pixi.toml  plots_to_gdrive  pyproject.toml  requirements.txt  test_uni_small.yaml  transfer_files.sh  zero_shot_transfer.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: copilot-instructions.md
envs/: deepspot.yaml  gdown.yaml  hest.yaml  install_scgpt_after_env_creation.sh  kaggle.yaml  langchain.yaml  llama_cpp.yaml  llama_cpp_fullenv.yaml  llava.yaml  llava_fullenv.yaml  main-aarch64.yaml  main.yaml  main_fullenv.yaml  setup.sh  setup_pixi.sh  vllm.yaml
hosting/cemm/: README.md  backup-image.sh  before_shutdown.sh  cellwhisperer_cycle.sh  cellxgene_config.yaml  docker-compose.yml  htpasswd  mount_clusterfs.sh  nginx.conf  nginx.tmpl  ngrok.yml  pull_datasets.sh  reset_everything.sh  set_default_embedding.py  startup.sh
hosting/cemm/archived_configs/: docker-compose.yml.16072025  docker-compose.yml.2025_08_20  docker-compose.yml.28042025  docker-compose.yml.with_spotwhisperer  nginx.conf.16072025  nginx.conf.2025_08_20
hosting/cemm/logging/: backfill-dates.sh  generate_stats.py  monthly_report.sh  process_logs.sh  run-daily-report.sh  today_report.sh
hosting/cemm/static/: index.html
hosting/cemm/supplementary_site/: index.html
hosting/cemm_processing/: docker-compose.yaml
hosting/docker_dataset_processing/: README.md  docker-compose.yaml
hosting/home/: Dockerfile  README.md  cellxgene_config.yaml  dev_server.sh  docker-compose.yml  install_minicoda.sh  nginx.conf  pull_datasets.sh  start.sh  website-builder-compose.yml
hosting/home/static/: index.html  maintenance.html
hosting/muwhpc/: README.md  main.sh  nginx.conf
hosting/spotwhisperer_suppl_website/: Readme.md
hosting/static/: index.html
resources/cancer_gene_essentiality/: CRISPRInferredCommonEssentials.csv
resources/immgen/: read_count_table.csv
results/immgen/: annotations.json  llm_embeddings.npz  rna_embeddings.npz
skills/cellwhisperer/: SKILL.md
slurm/: conda_env_process.sh  run  sbatch_process.job
src/: Snakefile  cellwhisperer_clip_v1.yaml  cellwhisperer_clip_v2_scgpt.yaml  cellwhisperer_clip_v2_uce.yaml  spotwhisperer_v2.yaml  spotwhisperer_v3.yaml
src/ablation_study/: README.md  Snakefile  base_config.yaml  fully_connected.yaml  wandb_export.csv
src/ablation_study/delta_config/: clip_mixed.yaml  locking_mode_LL.yaml  low_batchsize_grad_accumulation.yaml  no_census_data.yaml  no_sample_weights.yaml  scgpt.yaml
src/annotation_processing/: README.md  experiments.md
src/annotation_processing/llm/: run  start_llm.sh
src/annotation_processing/pipeline/: Snakefile
src/cellwhisperer/: README.md  config.py
src/cellwhisperer/expression_decoder/: README.md  __init__.py  gene_expression_decoder.py  gene_expression_decoder_lightning.py  prediction_writer.py
src/cellwhisperer/jointemb/: cell_model.py  cellwhisperer_lightning.py  conch_image_model.py  conch_processor.py  conch_text_model.py  conch_text_processor.py  config.py  frozen_model.py  geneformer_model.py  mlp_model.py  model.py  processing.py  scgpt_model.py  sweeping.py  training.ipynb  training.py  uce_model.py  uni_model.py
src/cellwhisperer/misc/: cuda.py  debug.py  utils.py
src/cellwhisperer/utils/: inference.py  model_io.py  processing.py
src/cellwhisperer/validation/: README.md  __init__.py  registry.py
src/cellxgene_preprocessing/: .gitignore  README.md  Snakefile
src/cellxgene_preprocessing/notebooks/: cellwhisperer_annotate_clusters.py.ipynb  compile_h5ad.py.ipynb  curate_llava_annotations.py.ipynb  deepspot_inference.py.ipynb  gpt4_curate_llava_annotations.py.ipynb  leiden_umap_embeddings.py.ipynb  llava_annotate_clusters.py.ipynb  plot_embeddings.py.ipynb  (+2 more)
src/datasets/: Snakefile
src/datasets/lbcl_atlas/: Snakefile  pyproject.toml  test_single_shard.sh
src/datasets/lbcl_atlas/scripts/: integrate_dataset.py  process_dataset.py  run_vllm_annotation.py  structured_annotations.py
src/datasets/quilt1m/: README.md  Snakefile  install.sh  pyproject.toml
src/datasets/quilt1m/context/: archs4_examples.txt  convert_to_json.py  quilt1m_examples.json  quilt1m_examples.txt
src/datasets/quilt1m/envs/: quilt1m.yaml
src/datasets/quilt1m/prompts/: curation.txt
src/datasets/quilt1m/scripts/: curation_processing.py  define_crops.py  filter_metadata.py  llm_processing.py
src/downloads/: ensemble_gene_symbol_dict.py  scgpt_model.py
src/experiments/: OMIM_diseases_exploration.py  README.md
src/experiments/850-trimodal-llm-analysis/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_analysis.sh
src/experiments/850-trimodal-llm-analysis/analysis/: README.md  generate_report.py  per_class_analysis.py  retrieval_analysis.py
src/experiments/880-lymphoma-dataset/: .gitignore  CONVENTIONS.md  README.md  color_cell_types.py  extract_initial_mask.py  main.py  pyproject.toml  reduce_image.py
src/experiments/core_tma_alignment/: README.md  analyze_tma.py  check_full_tma1_range.py  check_image_and_data.py  create_full_tma_mask.py  create_mask.py  final_a1_plot.py  find_a1.py  plot_a3.py  plot_a3_correct.py  plot_a3_debug.py  plot_a3_final.py  plot_coordinates.py  plot_first_fov.py  pyproject.toml
src/figures/: README.md  Snakefile
src/llava/: Snakefile  gsva_samples.csv  test_ids
src/llava_wrapper/: Snakefile
src/llm/: Snakefile
src/model_server/: main.py
src/plot_style/: main.style
src/post_clip_processing/: Snakefile
src/pre_training_processing/: README.md  Snakefile
src/rna/: Snakefile
src/scripts/: train_jointemb.sbatch
src/shared/: config.smk
src/single_cellm/: config.py
src/spotwhisperer_eval/: .gitignore  CONVENTIONS.md  README.md  Snakefile  base_config.yaml  hest_dataset_description.txt
src/validation/: README.md
static/: cosmx6k_cxg_overlap_genes.csv  cosmx6k_genes.csv
static/UCE/: README.md  gene_names.txt
(+845 files in other folders)
