[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "single-cellm"
version = "0.1.0"
description = "single ceLLM"
readme = "README.md"
authors = [{name = "Moritz Schaefer", email = "mail@moritzs.de"}]
keywords = ["single cell llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
# homepage = "https://github.com/epigen/single-cellm"

[project.scripts]
single_cellm = "single_cellm.jointemb.training:cli_main"
single_cellm_sweeping = "single_cellm.jointemb.sweeping:main"

[tool.setuptools.packages.find]
where = ["src", "modules/Geneformer", "modules"]
namespaces = false
# packages = ["single_cellm", "geneformer"]

[tool.setuptools.package-dir]
"single_cellm" = "src/single_cellm"
"geneformer" = "modules/Geneformer/geneformer"
"clip_lite" = "modules/clip_lite"