[project]
name = "tma-spatial-analysis"
version = "0.1.0"
description = "Spatial transcriptomics analysis for TMA data"
requires-python = ">=3.9"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-aarch64"]

[tool.pixi.dependencies]
python = "3.11.*"
scanpy = ">=1.10.0"
anndata = ">=0.10.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
matplotlib = ">=3.7.0"
pillow = ">=10.0.0"
tifffile = ">=2024.0.0"
